Fixed routing issue and added edunet project.

--- a/authz/src/main/resources/static/view/headers.html
+++ b/authz/src/main/resources/static/view/headers.html
@@ -11,11 +11,18 @@
 						
 					<!-- class="alignRight" flex="33">
 						<md-button class="redFont fnt16 fntWgt600 alignRight" ng-click=vm.registration()>Sign Up</md-button> -->
-						<md-button class="redFont fnt16 fntWgt600 alignRight" flex="33">
+						
+						<!-- <md-button class="redFont fnt16 fntWgt600 alignRight" flex="33">
 							
 						 		<a ui-sref="registration" ui-sref-active="active">Sign Up</a>						
 							
-						</md-button> 
+						</md-button> --> 
+						
+					<span class="alignRight" flex="33">
+					 	<p class="redFont fnt16 fntWgt600 alignRight" flex="33">
+					 		<a class="redFont fnt16 fntWgt600" ui-sref="registration" ui-sref-active="active">Sign Up</a>
+					 	</p>
+					</span>
 			</div>
 		</div>
 </md-toolbar>
