--- a/stdedu/src/main/resources/static/view/landingPage.html
+++ b/stdedu/src/main/resources/static/view/landingPage.html
@@ -7,7 +7,7 @@
 			
 			<div flex="80" >
 					
-			    <h1> Landing Page Contect</h1>
+			    <h3>There is no elevator to success. You have to take the stairs.</h3>
 				
 			</div>
 			</md-content> </md-card>
