Added password eMail activation flow

--- a/stdedu/src/main/resources/static/view/headers.html
+++ b/stdedu/src/main/resources/static/view/headers.html
@@ -22,7 +22,7 @@
 						class="redFont fnt16 fntWgt600">Hello {{vm.userId}}</p></span>
 				</span> 			
 					 
-				<span class="alignRight" flex="33"><a href=""/logout"">
+				<span class="alignRight" flex="33"><a href="/logout">
 					<md-button class="redFont signUpBtn">Sign out</md-button></a>
 				</span>
 				<!--	<a class="redFont fnt16 fntWgt600" ui-sref="landingPage" ui-sref-active="active">Student +</a>  -->
