--- a/stdedu/src/main/resources/static/view/landingPage.html
+++ b/stdedu/src/main/resources/static/view/landingPage.html
@@ -1,5 +1,19 @@
 
 		<div layout="row" layout-align="center center">
+			
+				<md-card flex-xs="90" flex-sm="70" flex-gt-sm="55"> <md-content
+				class="loginWrapper" layout-padding layout="row"
+				layout-align="center">			
+			
+			<div flex="80" >
+								    
+			   <h3>There are no limits to what you can accomplish, except the limits you place on your own thinking.</h3>
+				
+			</div>
+			</md-content> </md-card>
+		</div>
+		
+		<div layout="row" layout-align="center center">
 						
 			<md-card flex-xs="90" flex-sm="70" flex-gt-sm="55"> <md-content
 				class="loginWrapper" layout-padding layout="row"
@@ -8,7 +22,11 @@
 			<div flex="80" >
 					
 			    <h3>There is no elevator to success. You have to take the stairs.</h3>
-				
+			    				
 			</div>
 			</md-content> </md-card>
+			
 		</div>
+		
+		
+		
