--- a/stdedu/src/main/resources/static/view/profileHeaders.html
+++ b/stdedu/src/main/resources/static/view/profileHeaders.html
@@ -10,7 +10,7 @@
 				<!--	<a class="redFont fnt16 fntWgt600" ui-sref="landingPage" ui-sref-active="active">Student +</a>  -->
 				</span>	
 				
-				<span class="alignRight" flex="33"><a href=""/logout"">
+				<span class="alignRight" flex="33"><a href="/logout">
 					<md-button class="redFont signUpBtn">Sign out</md-button></a>
 				</span>
 										
