--- a/authz/src/main/resources/static/view/login.html
+++ b/authz/src/main/resources/static/view/login.html
@@ -30,8 +30,12 @@
 					</md-input-container>
 					<md-button type="submit" class="md-raised md-primary wdth100Per">Log
 					in</md-button>
-					<a class="redFont frgtPwd pull-right" href="/login/recover">Forgot
-						password?</a>
+					<!-- <a class="redFont frgtPwd pull-right" href="/login/recover">Forgot
+						password?</a> -->
+					<md-button class="text-center forgot-password-btn pull-right" flex-xs=100 ui-sref="forgotPWPage"" ui-sref-active="active">
+						Forgot Password?	
+					</md-button>
+
 					
 				</form>
 
